--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,16 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.label :title, id: 'title' %><br>
+    <%= f.text_field :title, id: 'title' %>
   </div>
 
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
+    <%= f.label :description, id: 'description' %><br>
+    <%= f.text_field :description, id: 'description' %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit id: 'Submit Post' %>
   </div>
 <% end %>
